--- a/docker-files/etc/dnsmasq.tmpl
+++ b/docker-files/etc/dnsmasq.tmpl
@@ -41,8 +41,9 @@ address=/{{ $host }}.{{ $network.Name }}.{{ $tld }}/{{ $network.IP }}
 {{ end }}
 
 bind-interfaces
-interface=docker0
+#interface=eth0
 except-interface=lo
 
 local=/docker/
-resolv-file=/etc/resolv.dnsmasq
+no-resolv
+
